// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content slot 1`] = `
<div class="van-tree-select" style="height: 300px;">
  <div class="van-sidebar van-tree-select__nav"><a class="van-sidebar-item van-sidebar-item--select van-tree-select__nav-item">
      <div class="van-sidebar-item__text">group1
        <!---->
      </div>
    </a></div>
  <div class="van-tree-select__content">Custom Content</div>
</div>
`;

exports[`empty list 1`] = `
<div class="van-tree-select" style="height: 300px;">
  <div class="van-sidebar van-tree-select__nav"></div>
  <div class="van-tree-select__content"></div>
</div>
`;

exports[`height prop 1`] = `
<div class="van-tree-select" style="height: 100vh;">
  <div class="van-sidebar van-tree-select__nav"></div>
  <div class="van-tree-select__content"></div>
</div>
`;

exports[`nav info 1`] = `
<div class="van-tree-select" style="height: 300px;">
  <div class="van-sidebar van-tree-select__nav"><a class="van-sidebar-item van-sidebar-item--select van-tree-select__nav-item">
      <div class="van-sidebar-item__text">group1<div class="van-info van-sidebar-item__info">3</div>
      </div>
    </a></div>
  <div class="van-tree-select__content"></div>
</div>
`;
